--- a/portfolio/.vscode/extensions.json
+++ b/portfolio/.vscode/extensions.json
@@ -1,4 +1,11 @@
 {
-  "recommendations": ["astro-build.astro-vscode"],
+  "recommendations": [
+    "astro-build.astro-vscode",
+    "esbenp.prettier-vscode",
+    "rodrigovallades.es7-react-js-snippets",
+    "unifiedjs.vscode-mdx",
+    "mattpocock.ts-error-translator",
+    "octref.vetur"
+  ],
   "unwantedRecommendations": []
 }
